add radio group

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.17",
+    "classnames": "^2.5.1",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
